2006-05-29  Andreas Köhler  <andi5.py@gmx.net>

	* src/backend/file/io-gncxml-v2.c: Add wait_for_gzip to avoid
	  reading from a file that is still being written to by a child
	  process, a race condition at the end of the xml import druid.

2006-05-28  David Hampton  <hampton@employees.org>

	* src/pixmaps/gnucash_splash.png: New splash screen from Joshua
	Facemyer / Impressus Art <faceman@impressusart.com>.

	* po/en_GB.po: Updated translation from Nigel Titley.

	* src/backend/file/io-gncxml-v2.c: Fix gcc4 complaint about unused
	return value of the write function.

2006-05-28  Andreas Köhler  <andi5.py@gmx.net>

	* src/backend/file/gnc-backend-file.c:
	* src/backend/file/io-gncxml-v2.c: Move is_gzipped_file to
	  io-gncxml-v2.c. Extend try_gz_open to read from gzipped files.
	  Let gnc_xml2_find_ambiguous and parse_with_subst_push_handler
	  read gzipped files.

	* src/backend/file/sixtp.c:
	* src/backend/file/sixtp.h: Add gnc_is_our_first_xml_chunk.

	* src/backend/file/io-gncxml-v2.h:
	* src/gnome-utils/druid-gnc-xml-import.c: Remove "error" from
	  argument list of gnc_xml2_find_ambiguous.

2006-05-27  Joshua Sled  <jsled@asynchronous.org>

	* packaging/gnucash-1.9.x.ebuild: Add docs extraction, un-slot,
	un-/opt-ize.

2006-05-27  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/druid-gnc-xml-import.c: When the user chooses
	  another default encoding, do not recheck the file for ambiguous
	  words, but rather just resort what has been found before.

2006-05-26  Derek Atkins  <derek@ihtfp.com>

	* src/engine/gnc-engine.c: load the qsf backend from the right place.

	* src/engine/gnc-engine.c:
	  force-exit gnucash if a required library can't be loaded.

	* src/engine/gnc-engine.c:
	* lib/libqof/qof/qofsession.c:
	  QOF should load its own backend libraries.
	  It shouldn't depend on apps to load QOF libraries.
	  Make sure app-defined backends are used first.
	  Fix a memory leak in qofsession.

2006-05-26   Christian Stimming <stimming@tuhh.de>
